--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,1 +1,12 @@
-<p>sign-up works!</p>
+<section class="container">
+  <form [formGroup]="signupForm" fxLayout="column" fxLayoutAlign="center center" class="mt-40">
+    <mat-form-field appearance="outline">
+      <mat-label>Enter email</mat-label>
+      <input type="email" matInput formControlName="Email">
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Enter password</mat-label>
+      <input type="password" matInput formControlName="password">
+    </mat-form-field>
+  </form>
+</section>
