fixed form control name

--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -6,7 +6,8 @@
     </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>Enter password</mat-label>
-      <input type="password" matInput formControlName="password">
+      <input type="password" matInput formControlName="Password">
     </mat-form-field>
+    <button type="submit" mat-raised-button color="primary">Submit</button>
   </form>
 </section>
