--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,6 @@ body {
 .mt-40 {
   margin-top: 40px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
