--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,9 +9,55 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+.mt-5 {
+  margin-top: 5px !important;
+}
+.mt-10 {
+  margin-top: 10px !important;
+}
+.mt-12 {
+  margin-top: 12px !important;
+}
+.mt-16 {
+  margin-top: 16px !important;
+}
+.mt-20 {
+  margin-top: 20px !important;
+}
+.mt-24 {
+  margin-top: 24px !important;
+}
 .mt-40 {
-  margin-top: 40px;
+  margin-top: 40px !important;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mb-5 {
+  margin-top: 5px !important;
+}
+.mb-10 {
+  margin-top: 10px !important;
+}
+.mb-12 {
+  margin-top: 12px !important;
+}
+.mb-16 {
+  margin-top: 16px !important;
+}
+.mb-20 {
+  margin-top: 20px !important;
+}
+.mb-24 {
+  margin-top: 24px !important;
+}
+.mb-40 {
+  margin-top: 40px !important;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
