--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -16,6 +16,15 @@
       <mat-error *ngIf="signupForm.controls.Password.hasError('minlength')">Password is too short!</mat-error>
       <mat-error *ngIf="signupForm.controls.Password.hasError('maxlength')">Password too long!</mat-error>
     </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Birth date</mat-label>
+      <input matInput [matDatepicker]="picker" placeholder="Enter birth date" [max]="maxDate" [min]="minDate">
+      <mat-hint>MM/DD/YYYY</mat-hint>
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
     <button type="submit" mat-raised-button color="primary" (click)="signup()">Submit</button>
   </form>
 </section>
