signup and  login form setup done

--- a/src/app/auth/sign-up/sign-up.component.scss
+++ b/src/app/auth/sign-up/sign-up.component.scss
@@ -5,8 +5,14 @@ mat-form-field {
 .container {
   height: 100%;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: start;
 }
 
-// .mt-16 {
-//   margin-top: 16px;
-// }
+.checkbox-container {
+  width: 300px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
