--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,10 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+.w-100-p {
+  width: 100% !important;
+}
+
 .mt-5 {
   margin-top: 5px !important;
 }
@@ -29,6 +33,12 @@ body {
 }
 .mt-40 {
   margin-top: 40px !important;
+}
+.mt-60 {
+  margin-top: 60px !important;
+}
+.mt-80 {
+  margin-top: 80px !important;
 }
 
 .mb-5 {
