--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,6 +1,6 @@
-<section class="container">
-  <form [formGroup]="signupForm" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px" class="mt-40"
-    autocomplete="off">
+<section class="container" fxLayout="row" fxLayoutAlign="center start" fxLayoutAlign.lt-lg="center center">
+  <form [formGroup]="signupForm" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px"
+    ngClass.gt-md="mt-80">
     <mat-form-field>
       <mat-label>Enter email</mat-label>
       <input type="email" matInput formControlName="Email">
@@ -19,12 +19,18 @@
 
     <mat-form-field>
       <mat-label>Birth date</mat-label>
-      <input matInput [matDatepicker]="picker" placeholder="Enter birth date" [max]="maxDate" [min]="minDate">
+      <input matInput [matDatepicker]="picker" placeholder="Enter birth date" [max]="maxDate" [min]="minDate"
+        formControlName="BirthDate">
       <mat-hint>MM/DD/YYYY</mat-hint>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
 
-    <button type="submit" mat-raised-button color="primary" (click)="signup()">Submit</button>
+    <div class="checkbox-container">
+      <mat-checkbox formControlName="TermsAgreed">Agree to terms and conditions</mat-checkbox>
+    </div>
+
+    <button type="submit" mat-raised-button color="primary" (click)="signup()"
+      [disabled]="signupForm.invalid">Submit</button>
   </form>
 </section>
