--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
   <mat-sidenav-content>
     <mat-toolbar fxLayout="row" fxLayoutAlign="space-between center">
       <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
-        <button mat-icon-button class="example-icon" aria-label="Toggle sidenav button" (click)="sidenav.toggle()">
+        <button fxHide.gt-xs mat-icon-button class="example-icon" aria-label="Toggle sidenav button"
+          (click)="sidenav.toggle()">
           <mat-icon>menu</mat-icon>
         </button>
         <a class="app-title" routerLink="/">
@@ -14,7 +15,7 @@
         </a>
       </div>
 
-      <ul class="toolbar-navigation-links" fxLayout fxLayoutAlign="end center" fxLayoutGap="5px">
+      <ul class="toolbar-navigation-links" fxLayout fxLayoutAlign="end center" fxLayoutGap="5px" fxHide.xs>
         <li><a routerLink="/signup" mat-button color="primary">Sign Up</a></li>
         <li> <a routerLink="/login" mat-button color="primary">Login</a></li>
         <li><a routerLink="/training" mat-button color="primary">Training</a></li>
