sidenav styling and basic navigation done for now

--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,6 +1,5 @@
-<section class="container" fxLayout="row" fxLayoutAlign="center start" fxLayoutAlign.lt-lg="center center">
-  <form [formGroup]="signupForm" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px"
-    ngClass.gt-md="mt-80">
+<section class="container" fxLayout="row" fxLayoutAlign="center start">
+  <form [formGroup]="signupForm" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px" class="mt-80">
     <mat-form-field>
       <mat-label>Enter email</mat-label>
       <input type="email" matInput formControlName="Email">
