--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,4 @@
+@import "./color-variables.scss";
 mat-sidenav-container,
 mat-sidenav-content {
   height: 100% !important;
@@ -19,4 +20,17 @@ mat-sidenav {
   span {
     font-size: 20px;
   }
+}
+
+.active-nav {
+  color: $gb_primary_color !important;
+}
+
+.sidenav-link-icon {
+  margin-right: 8px;
+}
+
+.sidenav-link-label {
+  font-size: 16px;
+  font-weight: 400;
 }
