--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,11 @@ body {
   width: 100% !important;
 }
 
+.container {
+  height: calc(100% - 56px);
+  width: 100%;
+}
+
 .mt-5 {
   margin-top: 5px !important;
 }
