--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,6 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav>
-    <mat-nav-list>
-      <a mat-list-item routerLink="/signup" routerLinkActive="active-nav" (click)="sidenav.close()">
-        <mat-icon class="sidenav-link-icon">person_add</mat-icon> <span class="sidenav-link-label">Signup</span>
-      </a>
-      <a mat-list-item routerLink="/login" routerLinkActive="active-nav" (click)="sidenav.close()">
-        <mat-icon class="sidenav-link-icon">login</mat-icon> <span class="sidenav-link-label">Login</span>
-      </a>
-      <a mat-list-item routerLink="/training" routerLinkActive="active-nav" (click)="sidenav.close()">
-        <mat-icon class="sidenav-link-icon">fitness_center</mat-icon> <span class="sidenav-link-label">Training</span>
-      </a>
-      <mat-list-item>
-        <button mat-icon-button (click)="sidenav.close()">
-          <mat-icon class="sidenav-link-icon">logout</mat-icon><span class="sidenav-link-label">Logout</span>
-        </button>
-      </mat-list-item>
-
-    </mat-nav-list>
+    <app-sidenav-list (sidenavLinkClicked)="sidenav.toggle()"></app-sidenav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar fxLayout="row" fxLayoutAlign="space-between center">
