--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,16 +5,6 @@ mat-sidenav-content {
   height: 100% !important;
 }
 
-.toolbar-navigation-links {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.app-title {
-  text-decoration: none;
-  color: #212121;
-  span {
-    font-size: 20px;
-  }
+mat-sidenav {
+  width: 250px !important;
 }
