welcome page initial content setup done

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,15 @@
-<p>welcome works!</p>
+<div class="container mt-24" fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-md="row"
+  fxLayoutGap.gt-md="20px">
+  <section>
+    <h2>Activity</h2>
+    <p>Stay active and enjoy better health and more fun!</p>
+  </section>
+  <section>
+    <h2>Community</h2>
+    <p>Get to know other people who share your passion!</p>
+  </section>
+  <section>
+    <h2>Challenges</h2>
+    <p>Never stop! Dive into new challenges everyday.</p>
+  </section>
+</div>
