Working on adding new trainings

--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,1 +1,7 @@
-<p>new-training works!</p>
+<div fxLayout fxLayoutAlign="center">
+  <mat-card>
+    <mat-card-title>Time to start a workout!</mat-card-title>
+    <mat-card-subtitle>Select type of workout</mat-card-subtitle>
+    <button mat-button>Start</button>
+  </mat-card>
+</div>
