--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,1 +1,10 @@
-<p>training works!</p>
+<div class="container">
+  <mat-tab-group mat-stretch-tabs>
+    <mat-tab label="New Exercise">
+      <app-new-training></app-new-training>
+    </mat-tab>
+    <mat-tab label="Past Exercises">
+      <app-past-training></app-past-training>
+    </mat-tab>
+  </mat-tab-group>
+</div>
