Working on current training component

--- a/src/app/training/current-training/current-training.component.html
+++ b/src/app/training/current-training/current-training.component.html
@@ -1,1 +1,7 @@
-<p>current-training works!</p>
+<div class="p-30" fxLayout="column" fxLayoutAlign="start center">
+  <mat-progress-spinner color="primary" mode="determinate" [value]="progress">
+  </mat-progress-spinner>
+  <h1>{{progress}}%</h1>
+  <p>Keep going. You are almost there!</p>
+  <button mat-raised-button color="accent">Stop</button>
+</div>
