--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -9,6 +9,6 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
-    <button mat-button>Start</button>
+    <button mat-button (click)="onStartTraining()">Start</button>
   </mat-card>
 </div>
