--- a/src/app/training/current-training/current-training.component.html
+++ b/src/app/training/current-training/current-training.component.html
@@ -1,5 +1,5 @@
 <div class="p-30" fxLayout="column" fxLayoutAlign="start center">
-  <mat-progress-spinner color="primary" mode="determinate" [value]="progress">
+  <mat-progress-spinner class="mb-5" color="primary" mode="determinate" [value]="progress">
   </mat-progress-spinner>
   <h1>{{progress}}%</h1>
   <p>Keep going. You are almost there!</p>
