--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,25 +47,25 @@ body {
 }
 
 .mb-5 {
-  margin-top: 5px !important;
+  margin-bottom: 5px !important;
 }
 .mb-10 {
-  margin-top: 10px !important;
+  margin-bottom: 10px !important;
 }
 .mb-12 {
-  margin-top: 12px !important;
+  margin-bottom: 12px !important;
 }
 .mb-16 {
-  margin-top: 16px !important;
+  margin-bottom: 16px !important;
 }
 .mb-20 {
-  margin-top: 20px !important;
+  margin-bottom: 20px !important;
 }
 .mb-24 {
-  margin-top: 24px !important;
+  margin-bottom: 24px !important;
 }
 .mb-40 {
-  margin-top: 40px !important;
+  margin-bottom: 40px !important;
 }
 
 .p-30 {
