--- a/src/app/training/modals/stop-training-modal/stop-training-modal.component.html
+++ b/src/app/training/modals/stop-training-modal/stop-training-modal.component.html
@@ -1,7 +1,8 @@
 <h1 mat-dialog-title>Exit Training</h1>
 
 <div mat-dialog-content class="mb-10">
-  Would you like to stop the current training?
+  <p>Would you like to stop the current training?</p>
+  <p>Progress: {{progress}} %</p>
 </div>
 
 <div mat-dialog-actions>
