basic login logout and routing mechanism implemented

--- a/src/app/navigations/header/header.component.html
+++ b/src/app/navigations/header/header.component.html
@@ -11,8 +11,9 @@
   </div>
 
   <ul class="toolbar-navigation-links" fxLayout fxLayoutAlign="end center" fxLayoutGap="5px" fxHide.xs>
-    <li><a routerLink="/signup" mat-button color="primary">Sign Up</a></li>
-    <li> <a routerLink="/login" mat-button color="primary">Login</a></li>
-    <li><a routerLink="/training" mat-button color="primary">Training</a></li>
+    <li *ngIf="!loggedIn"><a routerLink="/signup" mat-button color="primary">Sign Up</a></li>
+    <li *ngIf="!loggedIn"> <a routerLink="/login" mat-button color="primary">Login</a></li>
+    <li *ngIf="loggedIn"><a routerLink="/training" mat-button color="primary">Training</a></li>
+    <li *ngIf="loggedIn"><a (click)="logout()" mat-button color="primary">Logout</a></li>
   </ul>
 </mat-toolbar>
