--- a/src/app/navigations/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigations/sidenav-list/sidenav-list.component.html
@@ -1,17 +1,17 @@
 <mat-nav-list>
-  <a mat-list-item routerLink="/signup" routerLinkActive="active-nav" (click)="onClickSidenavLink()">
+  <a *ngIf="!loggedIn" mat-list-item routerLink="/signup" routerLinkActive="active-nav" (click)="onClickSidenavLink()">
     <mat-icon class="sidenav-link-icon">person_add</mat-icon> <span class="sidenav-link-label">Signup</span>
   </a>
-  <a mat-list-item routerLink="/login" routerLinkActive="active-nav" (click)="onClickSidenavLink()">
+  <a *ngIf="!loggedIn" mat-list-item routerLink="/login" routerLinkActive="active-nav" (click)="onClickSidenavLink()">
     <mat-icon class="sidenav-link-icon">login</mat-icon> <span class="sidenav-link-label">Login</span>
   </a>
-  <a mat-list-item routerLink="/training" routerLinkActive="active-nav" (click)="onClickSidenavLink()">
+  <a *ngIf="loggedIn" mat-list-item routerLink="/training" routerLinkActive="active-nav" (click)="onClickSidenavLink()">
     <mat-icon class="sidenav-link-icon">fitness_center</mat-icon> <span class="sidenav-link-label">Training</span>
   </a>
-  <mat-list-item>
-    <button mat-icon-button (click)="onClickSidenavLink()">
-      <mat-icon class="sidenav-link-icon">logout</mat-icon><span class="sidenav-link-label">Logout</span>
-    </button>
-  </mat-list-item>
+
+  <a *ngIf="loggedIn" mat-list-item routerLink="/logout" routerLinkActive="active-nav" (click)="logout()">
+    <mat-icon class="sidenav-link-icon">logout</mat-icon><span class="sidenav-link-label">Logout</span>
+  </a>
+
 
 </mat-nav-list>
