added route guard for training component

--- a/src/app/navigations/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigations/sidenav-list/sidenav-list.component.html
@@ -9,7 +9,7 @@
     <mat-icon class="sidenav-link-icon">fitness_center</mat-icon> <span class="sidenav-link-label">Training</span>
   </a>
 
-  <a *ngIf="loggedIn" mat-list-item routerLink="/logout" routerLinkActive="active-nav" (click)="logout()">
+  <a *ngIf="loggedIn" mat-list-item routerLinkActive="active-nav" (click)="logout()">
     <mat-icon class="sidenav-link-icon">logout</mat-icon><span class="sidenav-link-label">Logout</span>
   </a>
 
