--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -4,8 +4,8 @@
     <mat-form-field>
       <mat-label>Select type of workout</mat-label>
       <mat-select>
-        <mat-option *ngFor="let workout of workouts" [value]="workout">
-          {{workout}}
+        <mat-option *ngFor="let workout of workouts" [value]="workout.id">
+          {{workout.name}}
         </mat-option>
       </mat-select>
     </mat-form-field>
