Tracking past exercises on dummy data implemented

--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -8,5 +8,5 @@
     </mat-tab>
   </mat-tab-group>
 
-  <app-current-training (exitTraining)="ongoingTraining = false" *ngIf="ongoingTraining"></app-current-training>
+  <app-current-training *ngIf="ongoingTraining"></app-current-training>
 </div>
