--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -1,22 +1,22 @@
-<mat-table [dataSource]="dataSource">
+<mat-table [dataSource]="dataSource" matSort>
   <ng-container matColumnDef="date">
-    <mat-header-cell *matHeaderCellDef>Date</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
     <mat-cell *matCellDef="let row">{{row.date | date: 'mediumDate'}}</mat-cell>
   </ng-container>
   <ng-container matColumnDef="name">
-    <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
     <mat-cell *matCellDef="let row">{{row.name}}</mat-cell>
   </ng-container>
   <ng-container matColumnDef="calories">
-    <mat-header-cell *matHeaderCellDef>Calories</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Calories</mat-header-cell>
     <mat-cell *matCellDef="let row">{{row.calories | number}}</mat-cell>
   </ng-container>
   <ng-container matColumnDef="duration">
-    <mat-header-cell *matHeaderCellDef>Duration</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Duration</mat-header-cell>
     <mat-cell *matCellDef="let row">{{row.duration | number}}</mat-cell>
   </ng-container>
   <ng-container matColumnDef="status">
-    <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
     <mat-cell *matCellDef="let row">{{row.status}}</mat-cell>
   </ng-container>
 
