--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -1,4 +1,4 @@
-<mat-table [dataSource]="dataSource" matSort>
+<mat-table class="table-container" [dataSource]="dataSource" matSort>
   <ng-container matColumnDef="date">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
     <mat-cell *matCellDef="let row">{{row.date | date: 'mediumDate'}}</mat-cell>
