--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -1,25 +1,31 @@
-<mat-table class="table-container" [dataSource]="dataSource" matSort>
-  <ng-container matColumnDef="date">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
-    <mat-cell *matCellDef="let row">{{row.date | date: 'mediumDate'}}</mat-cell>
-  </ng-container>
-  <ng-container matColumnDef="name">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-    <mat-cell *matCellDef="let row">{{row.name}}</mat-cell>
-  </ng-container>
-  <ng-container matColumnDef="calories">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>Calories</mat-header-cell>
-    <mat-cell *matCellDef="let row">{{row.calories | number}}</mat-cell>
-  </ng-container>
-  <ng-container matColumnDef="duration">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>Duration</mat-header-cell>
-    <mat-cell *matCellDef="let row">{{row.duration | number}}</mat-cell>
-  </ng-container>
-  <ng-container matColumnDef="status">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
-    <mat-cell *matCellDef="let row">{{row.status}}</mat-cell>
-  </ng-container>
+<div class="table-container" fxLayout="column" fxLayoutAlign="center end">
+  <mat-form-field class="filter-input">
+    <input type="text" matInput (keyup)="filterData($event)" placeholder="Search past exercises">
+    <mat-icon matSuffix>search</mat-icon>
+  </mat-form-field>
+  <mat-table class="w-100-p" [dataSource]="dataSource" matSort>
+    <ng-container matColumnDef="date">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{row.date | date: 'mediumDate'}}</mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{row.name}}</mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="calories">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Calories</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{row.calories | number}}</mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="duration">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Duration</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{row.duration | number}}</mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="status">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{row.status}}</mat-cell>
+    </ng-container>
 
-  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-</mat-table>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
+</div>
