--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -28,4 +28,8 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
+
+  <mat-paginator class="w-100-p" #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"
+    aria-label="Past exercises">
+  </mat-paginator>
 </div>
