--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -2,14 +2,16 @@
   <mat-card fxFlex="400px" fxFlex.xs="100%" fxLayout="column" fxLayoutAlign="center center">
     <mat-card-title>Time to start a workout!</mat-card-title>
 
-    <mat-form-field>
+    <mat-form-field *ngIf="!isLoading">
       <mat-label>Select type of workout</mat-label>
       <mat-select [formControl]="selectWorkoutControl" required>
-        <mat-option *ngFor="let workout of workouts" [value]="workout.id">
+        <mat-option *ngFor="let workout of workouts" [value]="workout.name">
           {{workout.name}}
         </mat-option>
       </mat-select>
     </mat-form-field>
+
+    <mat-spinner *ngIf="isLoading" [diameter]="40"></mat-spinner>
 
     <button mat-button [disabled]="!selectWorkoutControl.value" (click)="onStartTraining()">Start</button>
   </mat-card>
