--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -6,7 +6,7 @@
   <mat-table class="w-100-p" [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="date">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
-      <mat-cell *matCellDef="let row">{{row.date | date: 'mediumDate'}}</mat-cell>
+      <mat-cell *matCellDef="let row">{{row.date.toDate() | date: 'mediumDate'}}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
