--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -14,7 +14,8 @@
       <mat-error *ngIf="loginForm.controls.Password.hasError('required')">This field is required</mat-error>
     </mat-form-field>
 
-    <button type="submit" mat-raised-button color="primary" (click)="login()"
+    <mat-spinner *ngIf="isLoading" [diameter]="40"></mat-spinner>
+    <button *ngIf="!isLoading" type="submit" mat-raised-button color="primary" (click)="login()"
       [disabled]="loginForm.invalid">Submit</button>
   </form>
 </section>
