--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,18 +1,26 @@
 <div class="p-30" fxLayout fxLayoutAlign="center">
   <mat-card fxFlex="400px" fxFlex.xs="100%" fxLayout="column" fxLayoutAlign="center center">
-    <mat-card-title>Time to start a workout!</mat-card-title>
+    <mat-card-title class="mb-24">Time to start a workout!</mat-card-title>
 
-    <mat-form-field *ngIf="!isLoading">
-      <mat-label>Select type of workout</mat-label>
-      <mat-select [formControl]="selectWorkoutControl" required>
-        <mat-option *ngFor="let workout of workouts" [value]="workout.id">
-          {{workout.name}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+    <form [formGroup]="startTrainingForm" *ngIf="!isLoading" fxLayout="column">
+      <mat-form-field>
+        <mat-label>Select muscle group</mat-label>
+        <mat-select formControlName="muscleGroup">
+          <mat-option *ngFor="let muscleGroup of muscleGroups" [value]="muscleGroup">{{muscleGroup}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Select type of workout</mat-label>
+        <mat-select formControlName="workout" required>
+          <mat-option *ngFor="let workout of workouts" [value]="workout.id">
+            {{workout.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </form>
 
     <mat-spinner *ngIf="isLoading" [diameter]="40"></mat-spinner>
 
-    <button mat-button [disabled]="!selectWorkoutControl.value" (click)="onStartTraining()">Start</button>
+    <button mat-button [disabled]="!startTrainingForm.valid" (click)="onStartTraining()">Start</button>
   </mat-card>
 </div>
