rehalled the whole application

--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -21,13 +21,13 @@
       </mat-form-field>
       <div *ngIf="workoutSelected()" fxLayout="column">
         <mat-form-field>
-          <mat-label>Number of reps</mat-label>
-          <input type="number" matInput formControlName="reps">
+          <mat-label>Number of sets</mat-label>
+          <input type="number" matInput formControlName="sets">
           <mat-error>This field is required</mat-error>
         </mat-form-field>
         <mat-form-field>
-          <mat-label>Duration of rep</mat-label>
-          <input type="number" matInput formControlName="repDuration">
+          <mat-label>Set Duration</mat-label>
+          <input type="number" matInput formControlName="setDuration">
           <mat-error>This field is required</mat-error>
         </mat-form-field>
         <mat-form-field>
