--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -18,7 +18,7 @@
       </mat-cell>
     </ng-container>
     <ng-container matColumnDef="Sets">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Sets</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Number of Sets Completed</mat-header-cell>
       <mat-cell *matCellDef="let row">{{row.Sets | number}}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="SetDuration">
