--- a/src/app/training/current-training/current-training.component.html
+++ b/src/app/training/current-training/current-training.component.html
@@ -1,4 +1,5 @@
 <div class="p-30" fxLayout="column" fxLayoutAlign="start center">
+  <h1 class="mb-24">{{currentExercise.Name}}</h1>
   <mat-progress-spinner class="mb-5" color="primary" mode="determinate" [value]="progress" *ngIf="!intervalOngoing">
   </mat-progress-spinner>
   <mat-progress-spinner class="mb-5" color="warn" mode="determinate" [value]="intervalProgress" *ngIf="intervalOngoing">
