make schedule button added

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-24" fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-md="row"
+<div class="container mt-24 mb-24" fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-md="row"
   fxLayoutGap.gt-md="20px">
   <section>
     <h2>Activity</h2>
@@ -12,4 +12,8 @@
     <h2>Challenges</h2>
     <p>Never stop! Dive into new challenges everyday.</p>
   </section>
+</div>
+
+<div fxLayout="row" fxLayoutAlign="center center">
+  <button mat-raised-button color="accent">Make Schedule</button>
 </div>
