schedule component route setup done

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -15,5 +15,5 @@
 </div>
 
 <div fxLayout="row" fxLayoutAlign="center center">
-  <button mat-raised-button color="accent">Make Schedule</button>
+  <button mat-raised-button color="accent" routerLink="schedule">Make Schedule</button>
 </div>
