--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,6 +68,10 @@ body {
   margin-bottom: 40px !important;
 }
 
+.p-24 {
+  padding: 24px !important;
+}
+
 .p-30 {
   padding: 30px !important;
 }
