--- a/src/app/gym-schedule/schedule/schedule.component.html
+++ b/src/app/gym-schedule/schedule/schedule.component.html
@@ -7,7 +7,7 @@
       fxLayout.lt-sm="column" fxLayoutAlign="start center" fxLayoutAlign.lt-sm="center start">
       <p fxFlex="20" fxFlex.lt-sm="100" class="day">{{day}}</p>
       <div fxFlex="80" fxFlex.lt-sm="100">
-        <button mat-icon-button color="primary">
+        <button mat-icon-button color="primary" (click)="addExercise(day)">
           <mat-icon>add</mat-icon>
         </button>
       </div>
