add exercise modal header and footer section done

--- a/src/app/color-variables.scss
+++ b/src/app/color-variables.scss
@@ -87,3 +87,7 @@ $package-box-shadow: rgba(0, 0, 0, 0.16);
 $logo-border-color: #ebebeb;
 $remaining-contact-container: #ebf4ff;
 $remaining-contact-icon: #2d8eff;
+
+$primary-color: #673ab7;
+$accent-color: #ffd740;
+$warn-color: #f44336;
