Add exercise form done

--- a/src/app/gym-schedule/modals/add-exercise/add-exercise.component.html
+++ b/src/app/gym-schedule/modals/add-exercise/add-exercise.component.html
@@ -2,9 +2,49 @@
     class="color-primary font-size-16">{{day}}</span></h1>
 
 <div mat-dialog-content class="mb-10">
+  <form [formGroup]="addTrainingForm" *ngIf="!isLoading" fxLayout="column">
+    <mat-form-field>
+      <mat-label>Select muscle group</mat-label>
+      <mat-select formControlName="muscleGroup">
+        <mat-option *ngFor="let muscleGroup of muscleGroups" [value]="muscleGroup">{{muscleGroup}}</mat-option>
+      </mat-select>
+      <mat-error>This field is required</mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Select workout</mat-label>
+      <mat-select formControlName="workout" required [disabled]="isWorkoutDisabled()">
+        <mat-option *ngFor="let workout of workouts" [value]="workout.Name">
+          {{workout.Name}}
+        </mat-option>
+      </mat-select>
+      <mat-error>This field is required</mat-error>
+    </mat-form-field>
+    <div *ngIf="workoutSelected()" fxLayout="column">
+      <mat-form-field>
+        <mat-label>Number of sets</mat-label>
+        <input type="number" matInput formControlName="sets">
+        <mat-error>This field is required</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Set Duration</mat-label>
+        <input type="number" matInput formControlName="setDuration">
+        <mat-error>This field is required</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Interval time</mat-label>
+        <input type="number" matInput formControlName="break">
+        <mat-error>This field is required</mat-error>
+      </mat-form-field>
+    </div>
+
+  </form>
+
+  <mat-spinner *ngIf="isLoading" [diameter]="40"></mat-spinner>
 </div>
 
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-raised-button [mat-dialog-close]="{exitTraining: true}" color="warn" cdkFocusInitial>Save</button>
+  <button mat-raised-button color="warn" cdkFocusInitial [disabled]="!addTrainingForm.valid" (click)="addExercise()">
+    <mat-icon>add</mat-icon> Add
+  </button>
 </div>
