--- a/src/app/gym-schedule/schedule/schedule.component.html
+++ b/src/app/gym-schedule/schedule/schedule.component.html
@@ -6,7 +6,12 @@
     <div *ngFor="let day of weekDays; index as idx" class="day-border-bottom mb-40" fxFlex="100" fxLayout="row"
       fxLayout.lt-sm="column" fxLayoutAlign="start center" fxLayoutAlign.lt-sm="center start">
       <p fxFlex="20" fxFlex.lt-sm="100" class="day">{{day}}</p>
-      <div fxFlex="80" fxFlex.lt-sm="100">
+      <div fxFlex="80" fxFlex.lt-sm="100" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px">
+
+        <mat-chip-list *ngFor="let exercise of schedule[day]">
+          <mat-chip>{{exercise.Name}}</mat-chip>
+        </mat-chip-list>
+
         <button mat-icon-button color="primary" (click)="addExercise(day)">
           <mat-icon>add</mat-icon>
         </button>
