--- a/src/app/gym-schedule/schedule/schedule.component.html
+++ b/src/app/gym-schedule/schedule/schedule.component.html
@@ -8,8 +8,10 @@
       <p fxFlex="20" fxFlex.lt-sm="100" class="day">{{day}}</p>
       <div fxFlex="80" fxFlex.lt-sm="100" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px">
 
-        <mat-chip-list *ngFor="let exercise of schedule[day]; index as exerciseIndex">
-          <mat-chip (removed)="removeExercise(day, exerciseIndex)">{{exercise.Name}} <button matChipRemove>
+        <mat-chip-list class="exercises-chip-list" *ngFor="let exercise of schedule[day]; index as exerciseIndex"
+          cdkDropList cdkDropListOrientation="horizontal" (cdkDropListDropped)="drop($event, day)">
+          <mat-chip class="exercise-chip" cdkDrag (removed)="removeExercise(day, exerciseIndex)">{{exercise.Name}}
+            <button matChipRemove>
               <mat-icon>cancel</mat-icon>
             </button></mat-chip>
         </mat-chip-list>
