modified welcome prompt

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -5,8 +5,8 @@
     <p>Stay active and enjoy better health and more fun!</p>
   </section>
   <section>
-    <h2>Community</h2>
-    <p>Get to know other people who share your passion!</p>
+    <h2>Consistency</h2>
+    <p>Create your own custom weekly workout schedule!</p>
   </section>
   <section>
     <h2>Challenges</h2>
