--- a/src/app/gym-schedule/schedule/schedule.component.html
+++ b/src/app/gym-schedule/schedule/schedule.component.html
@@ -1,7 +1,12 @@
 <div class="container p-30" fxLayout="column" fxLayoutAlign="center start">
+  <div class="w-100-p" fxLayout="row wrap" fxLayoutAlign="space-between center">
+    <div>
+      <h1>Create Your Schedule</h1>
+      <mat-hint class="mb-10">Drag and drop to change exercise order</mat-hint>
+    </div>
+    <button mat-raised-button color="primary" [disabled]="scheduleEditCounter <= 0">Save</button>
+  </div>
 
-  <h1>Create Your Schedule</h1>
-  <mat-hint class="mb-10">Drag and drop to change exercise order</mat-hint>
 
   <mat-card class="w-100-p p-24" fxLayout="column">
     <div *ngFor="let day of weekDays; index as idx" class="day-border-bottom mb-40" fxFlex="100" fxLayout="row"
