--- a/src/app/navigations/header/header.component.html
+++ b/src/app/navigations/header/header.component.html
@@ -13,6 +13,7 @@
   <ul class="toolbar-navigation-links" fxLayout fxLayoutAlign="end center" fxLayoutGap="5px" fxHide.xs>
     <li *ngIf="!loggedIn"><a routerLink="auth/signup" mat-button color="primary">Sign Up</a></li>
     <li *ngIf="!loggedIn"> <a routerLink="auth/login" mat-button color="primary">Login</a></li>
+    <li *ngIf="loggedIn"><a routerLink="/schedule/my-schedule" mat-button color="primary">My Schedule</a></li>
     <li *ngIf="loggedIn"><a routerLink="/training" mat-button color="primary">Training</a></li>
     <li *ngIf="loggedIn"><a (click)="logout()" mat-button color="primary">Logout</a></li>
   </ul>
