working on showing todays workouts in ui

--- a/src/app/gym-schedule/my-schedule/my-schedule.component.html
+++ b/src/app/gym-schedule/my-schedule/my-schedule.component.html
@@ -1,1 +1,6 @@
-<p>my-schedule works!</p>
+<div class="container p-30" fxLayout="row" fxLayoutAlign="center center">
+
+  <p *ngIf="noWorkoutsScheduled">No workouts scheduled for today</p>
+
+  <ngx-loading [show]="isLoading" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
+</div>
