my schedule component design and implementation done

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,6 +48,19 @@ body {
   font-size: 30px;
 }
 
+.font-weight-400 {
+  font-weight: 400;
+}
+.font-weight-500 {
+  font-weight: 500;
+}
+.font-weight-600 {
+  font-weight: 600;
+}
+.font-weight-700 {
+  font-weight: 700;
+}
+
 .mt-5 {
   margin-top: 5px !important;
 }
@@ -96,6 +109,20 @@ body {
 }
 .mb-40 {
   margin-bottom: 40px !important;
+}
+
+.mr-5 {
+  margin-right: 5px !important;
+}
+.mr-10 {
+  margin-right: 10px !important;
+}
+.mr-12 {
+  margin-right: 12px !important;
+}
+
+.mr-20 {
+  margin-right: 20px !important;
 }
 
 .p-24 {
