handled responsiveness issue

--- a/src/app/gym-schedule/my-schedule/my-schedule.component.html
+++ b/src/app/gym-schedule/my-schedule/my-schedule.component.html
@@ -1,5 +1,5 @@
-<div class="container p-30" fxLayout="column" fxLayoutAlign="center start">
-  <h1>My Schedule ({{dayName}})</h1>
+<div class="container p-30" fxLayout="column" fxLayoutAlign="center center" fxLayoutAlign.lt-sm="center start">
+  <h1 class="mb-20">My Schedule ({{dayName}})</h1>
 
   <p *ngIf="noWorkoutsScheduled">No workouts scheduled for today</p>
 
